create automated testing for orderSummary

--- a/checkout.html
+++ b/checkout.html
@@ -43,11 +43,9 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary"></div> <!-- This html part is generate in the orderSummary.js file -->
+        <div class="js-order-summary"></div> <!-- This html part is generate in the orderSummary.js file -->
 
-        <div class="payment-summary js-payment-summary">
- 
-        </div>
+        <div class="payment-summary js-payment-summary"></div>
       </div>
     </div>
 
